Bug 469486 - Cannot continue login process if matrix ID is pasted
Summary: Cannot continue login process if matrix ID is pasted
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-08 11:49 UTC by chaku
Modified: 2023-06-08 17:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
continue button is disabled (I pasted my matrix ID) (9.06 KB, image/png)
2023-05-08 11:49 UTC, chaku
Details

Note You need to log in before you can comment on or make changes to this bug.
Description chaku 2023-05-08 11:49:14 UTC
Created attachment 158774 [details]
continue button is disabled (I pasted my matrix ID)

SUMMARY
Pasting a valid matrix ID on a fresh login window does not allow logging in (the Continue button is disabled). If the same matrix ID is typed, it allows logging in 


STEPS TO REPRODUCE
1. Open a new login window
2. Paste a valid matrix ID

OBSERVED RESULT
'Continue' button is disabled

EXPECTED RESULT
'Continue' button should be enabled, like in case of manually typing the same matrix ID

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.27.4
KDE Frameworks Version:  5.105.0
Qt Version: 5.15.9

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2023-05-08 12:29:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/975
Comment 2 Tobias Fella 2023-06-08 17:55:09 UTC
Git commit bc4c4f851965a0226c2649e3b73a0c745acc815c by Tobias Fella.
Committed on 08/06/2023 at 17:29.
Pushed by tfella into branch 'master'.

Refactor login

M  +4    -0    src/login.cpp
M  +2    -8    src/qml/Component/Login/Login.qml

https://invent.kde.org/network/neochat/-/commit/bc4c4f851965a0226c2649e3b73a0c745acc815c