Refactor login

BUG: 469486